--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -13,6 +13,16 @@ Antes de nada es recomendable volver a ver este vídeo introductorio:
 
 <iframe src="https://www.youtube.com/embed/HeZWcZmrQUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+Preguntas sobre el vídeo:
+
+- ¿Cómo sabe el router a qué dispositivo de la LAN a la que va el paquete de respuesta?
+- ¿El router analiza la dirección MAC para realizar el trabajo del NAT satisfactoriamente?
+- ¿Qué es el NAT? ¿En qué dispositivo suele estar?
+- ¿Cuál es la IP de la puerta de enlace?
+- ¿Cuál es el rango de direcciones IP? ¿Cómo se puede calcular?
+- ¿Es lo mismo la puerta enlace que el gateway? ¿Qué le(s) corresponde(n)?
+- ¿Por qué existen las IPs privadas? ¿No podrían ser todas públicas y así ahorrarnos el paso de traducción?
+
 {:.section}
 ## Características de un NAT
 
@@ -23,6 +33,9 @@ Como sabes, no hay suficientes direcciones IPv4 públicas para asignar una direc
 | Clase A | 10.0.0.0 a 10.255.255.255 | 10.0.0.0/8 | 1 red |
 | Clase B | 172.16.0.0 a 172.31.255.255 | 172.16.0.0/12 | 16 redes |
 | Clase C | 192.168.0.0 a 192.168.255.255 | 192.168.0.0/16| 256 redes |
+
+{:.question}
+¿Cuál es la dirección IP de tu equipo? ¿Es pública o privada?
 
 {:.question}
 ¿Por qué el rango de direcciones privadas de Clase B se define del siguiente modo: 172.16.0.0/12?
@@ -50,10 +63,6 @@ Sin NAT, el agotamiento del espacio de direcciones IPv4 habría ocurrido mucho a
 NAT tiene muchos usos, pero el principal es conservar las direcciones IPv4 públicas. Esto se logra al permitir que las redes utilicen direcciones IPv4 privadas internamente y al proporcionar la traducción a una dirección pública solo cuando sea necesario. NAT tiene el beneficio percibido de agregar un grado de privacidad y seguridad a una red, ya que oculta las direcciones IPv4 internas de redes externas.
 
 Los routers con NAT habilitada se pueden configurar con una o más direcciones IPv4 públicas válidas. Estas direcciones públicas se conocen como "NAT pool". Cuando un dispositivo interno envía tráfico fuera de la red, el router con NAT habilitada traduce la dirección IPv4 interna del dispositivo a una dirección pública del conjunto de NAT. Para los dispositivos externos, todo el tráfico entrante y saliente de la red parece tener una dirección IPv4 pública del pool de direcciones proporcionado.
-
-En general, los routers NAT funcionan en la frontera de una red de rutas internas. Una red stub es una o más redes con una única conexión a su red vecina, una entrada y una salida de la red. En el ejemplo de la ilustración, el R2 es un router de frontera. Visto desde el ISP, el R2 forma una red stub.
-
-Cuando un dispositivo dentro de la red stub desea comunicarse con un dispositivo fuera de su red, el paquete se reenvía al router de frontera. El router de frontera realiza el proceso de NAT, es decir, traduce la dirección privada interna del dispositivo a una dirección pública, externa y enrutable.
 
 {:.subsection}
 ### ¿Cómo funciona un NAT?
