--- a/_posts/2022-02-08-nat.md
+++ b/_posts/2022-02-08-nat.md
@@ -23,6 +23,10 @@ Preguntas sobre el vídeo:
 - ¿Es lo mismo la puerta enlace que el gateway? ¿Qué le(s) corresponde(n)?
 - ¿Por qué existen las IPs privadas? ¿No podrían ser todas públicas y así ahorrarnos el paso de traducción?
 
+Y ver también este video:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YgcBCTfnx6U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 {:.section}
 ## Características de un NAT
 
@@ -126,6 +130,8 @@ Existen 3 tipos de NAT:
 - NAT estático (de correlación)
 - NAT dinámico (ocultación)
 - PAT (con correlación de puerto)
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RixJRiG2J9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 {:.subsection}
 ### NAT estático
