--- a/_posts/2022-05-08-vlsm.md
+++ b/_posts/2022-05-08-vlsm.md
@@ -24,6 +24,8 @@ VLSM solo está dividiendo en subredes una subred. La misma topología utilizada
 ![División de redes](DivisionDeRedes.png)
 _División de redes_
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_hFl9UBHO5c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 {:.section}
 ## Ejemplo de desperdicio de direcciones
 
