limpia de etiquetas, para que esté todo bien organizado.

--- a/_posts/2022-09-25-redes-locales-22-23.md
+++ b/_posts/2022-09-25-redes-locales-22-23.md
@@ -2,7 +2,7 @@
 title: Redes Locales 22 23
 date: 2022-09-25 23:40:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Redes Locales]
-tags: [redes locales]
+tags: [redes locales, smr]
 pin: true
 img_path: /assets/img/redes-locales-22-23/
 ---
