--- a/_posts/2022-11-13-capa-red.md
+++ b/_posts/2022-11-13-capa-red.md
@@ -2,7 +2,7 @@
 title: "Capa de red"
 date: 2022-11-13 11:00:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Redes Locales]
-tags: [gnu linux, comandos, terminal, bash, redes locales, teoría]
+tags: [smr, redes locales, teoría]
 img_path: /assets/img/capa-red/
 ---
 
