--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -145,11 +145,7 @@ p {
 ```
 
 <details class="card mb-2">
-  <summary class="card-header question" markdown="1">
-
-¿Qué tipos de selectores hay? 
-
-  </summary>
+  <summary class="card-header question">¿Qué tipos de selectores hay?</summary>
   <div class="card-body" markdown="1">
 
 Los básicos son los de:
@@ -164,13 +160,8 @@ Pero hay más, ya que podemos usar los combinators, las pseudoclases, los pseudo
   </div>
 </details>
 
-
 <details class="card mb-2">
-  <summary class="card-header question" markdown="1">
-
-¿Pueden dos etiquetas HTML tener el mismo id?
-
-  </summary>
+  <summary class="card-header question">¿Pueden dos etiquetas HTML tener el mismo id?</summary>
   <div class="card-body" markdown="1">
 
 Los identificadores deben ser únicos para identificar de manera unequívoca el elemento.
@@ -180,11 +171,7 @@ Los identificadores deben ser únicos para identificar de manera unequívoca el 
 </details>
 
 <details class="card mb-2">
-  <summary class="card-header question" markdown="1">
-
-¿Y si añadimos varios estilos al mismo elemento? ¿Qué ocurrirá?
-
-  </summary>
+  <summary class="card-header question">¿Y si añadimos varios estilos al mismo elemento? ¿Qué ocurrirá?</summary>
   <div class="card-body" markdown="1">
 
 Se irán procesando en cascada sobreescribiendose unos a otros.
@@ -211,7 +198,6 @@ Al margen de la selección "básica" de elementos a través de CSS, que suele re
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
-
 
 <details class="card mb-2">
   <summary class="card-header question">¿Qué diferencia hay entre un margin y un padding?</summary>
@@ -282,11 +268,7 @@ Puedo usar la coma.
 </details>
 
 <details class="card mb-2">
-  <summary class="card-header question" markdown="1">
-
-¿Qué significa indentar?
-
-  </summary>
+  <summary class="card-header question">¿Qué significa indentar?</summary>
   <div class="card-body" markdown="1">
 
 Se llama indentación de código al hecho de utilizar sangrado (mover ligeramente hacia la derecha) en las líneas de código para facilitar la lectura, e indicar visualmente si nos encontramos en el interior de una función, bucle, condicional, etc...
@@ -385,17 +367,13 @@ Lee el apartado [La propiedad overflow del artículo ](https://lenguajecss.com/c
 [Pseudoclases CSS](https://lenguajecss.com/css/selectores/pseudoclases/)
 
 [Pseudoelementos CSS](https://lenguajecss.com/css/selectores/pseudoelementos/)
-    
+
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
 
 <details class="card mb-2">
-  <summary class="card-header question" markdown="1">
-
-¿Puedo seleccionar diferentes elementos que compartan un atributo?
-
-  </summary>
+  <summary class="card-header question">¿Puedo seleccionar diferentes elementos que compartan un atributo?</summary>
   <div class="card-body" markdown="1">
 
 Si. Es el llamado selector por atributo que está explicado en el artículo [Atributos CSS](https://lenguajecss.com/css/selectores/atributos/).
@@ -422,11 +400,7 @@ Lee el artículo [Atributos CSS](https://lenguajecss.com/css/selectores/atributo
 </details>
 
 <details class="card mb-2">
-  <summary class="card-header question" markdown="1">
-
-¿De dónde adónde va los valores de los colores RGB? ¿Qué significa la A de RGBA?
-
-  </summary>
+  <summary class="card-header question">¿De dónde adónde van los valores de los colores RGB? ¿Qué significa la A de RGBA?</summary>
   <div class="card-body" markdown="1">
 
 Las formas de indicar un color en CSS son las siguientes:
@@ -447,13 +421,8 @@ Puedes probarlo tú mismo en [este enlace](https://www.w3schools.com/cssref/tryi
   </div>
 </details>
 
-
 <details class="card mb-2">
-  <summary class="card-header question" markdown="1">
-
-¿De dónde adónde va el valor de los colores HUE?
-
-  </summary>
+  <summary class="card-header question">¿De dónde adónde va el valor de los colores HUE?</summary>
   <div class="card-body" markdown="1">
 
 Las siglas HSL significan matiz de color (hue), saturación y luminosidad (brillo). La primera cifra selecciona el matiz de color, representado con H en el círculo exterior de la imagen. Se trata de un valor ANGLE  de 0deg a 360deg. Por otro lado, las dos siguientes, son el porcentaje PERCENT de saturación y el brillo del color, respectivamente, en ambos casos un valor de 0% a 100%.
@@ -622,14 +591,12 @@ Leer [Grid CSS: Introducción](https://lenguajecss.com/css/maquetacion-y-colocac
   </div>
 </details>
 
-
-
 ## ¿Qué es la usabilidad?
 
 - [Ejemplo de como NO hacer las cosas](https://userinyerface.com/)
 - [Principios de usabilidad web de Jacob Nielsen y el diseño UX](https://es.semrush.com/blog/usabilidad-web-principios-jakob-nielsen/)
 
-## Para todo lo demás... 
+## Para todo lo demás...
 
 - [Lenguaje CSS](https://lenguajecss.com/css/)
 - [CSS Tutorial (W3Schools)](https://www.w3schools.com/css/default.asp)
