arreglo numeraciones de redes locales

--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -28,13 +28,16 @@ Más información el artículo [¿Qué son los números binarios y por qué los 
 </details>
 
 
-## 1. Binario a decimal
+{:.section}
+## Binario a decimal
 
 <iframe src="https://www.youtube.com/embed/3HRu7BvuSIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-## 2. Pasar de binario a decimal
+{:.section}
+## Pasar de binario a decimal
 
-### 2.1. Números de 1 bit
+{:.subsection}
+### Números de 1 bit
 
 | 2<sup>0</sup> |  |
 | 1 | Decimal |
@@ -44,7 +47,8 @@ Más información el artículo [¿Qué son los números binarios y por qué los 
 
 Como podemos observar, con palabras de 1 bit podemos representar un total de 2<sup>1</sup> (2) números, cuyo rango va de 0 a 1.
 
-### 2.2. Núemeros de 2 bits
+{:.subsection}
+### Núemeros de 2 bits
 
 | 2<sup>1</sup> | 2<sup>0</sup> |  |
 | 2 | 1 | Decimal |
@@ -56,7 +60,8 @@ Como podemos observar, con palabras de 1 bit podemos representar un total de 2<s
 
 Como podemos observar, con palabras de 2 bits podemos representar un total de 2<sup>2</sup> (4) número, cuyo rango va de 0 a 3.
 
-### 2.3. Números de 3 bits
+{:.subsection}
+### Números de 3 bits
 
 | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> |  |
 | 4 | 2 | 1 | Decimal |
@@ -72,7 +77,8 @@ Como podemos observar, con palabras de 2 bits podemos representar un total de 2<
 
 Como podemos observar, con palabras de 3 bits podemos representar un total de 2<sup>3</sup> (8) números, cuyo rango va de 0 a 7.
 
-### 2.4. Números de 8 bits (octetos)
+{:.subsection}
+### Números de 8 bits (octetos)
 
 |   | 2<sup>7</sup> | 2<sup>6</sup> | 2<sup>5</sup> | 2<sup>4</sup> | 2<sup>3</sup> | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> |   |
 |   | 128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 | Suma |
@@ -82,22 +88,26 @@ Como podemos observar, con palabras de 3 bits podemos representar un total de 2<
 
 Como podemos observar, con palabras de 8 bit podemos representar un total de 2<sup>8</sup> (256) números, cuyo rango va de 0 a 255.
 
-### 2.5. Números de X bits
+{:.subsection}
+### Números de X bits
 
 Con palabras de X bits podemos representar un total de 2<sup>X</sup> números, cuyo rango va de 0 a 2<sup>X</sup>-1.
 
-## 3. Decimal a binario
+{:.section}
+## Decimal a binario
 
 <iframe src="https://www.youtube.com/embed/IpxNHH88HRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-### 3.1. Consejos para el paso de binario a decimal
+{:.subsection}
+### Consejos para el paso de binario a decimal
 
 - Si el bit de menor peso vale 1 nos encontraremos ante un número impar.
 - Si añadimos ceros por la izquierda a un número binario, el número no cambia.
 - Si añadimos ceros por la derecha a un número binario lo estamos multiplicando por dos.
 - Si el número que es todo unos, una forma rápida de calcular su valor es calcular el siguiente número y restarle uno a posteriori. Es decir, si tengo que obtener el valor de 111111, puedo calcular el valor de 1000000 que es 64 y restarle uno obteniendo que (111111)<sub>2</sub> = (63)<sub>10</sub>.
 
-### 3.2. Números de 8 bits (octetos)
+{:.subsection}
+### Números de 8 bits (octetos)
 
 |   | 2<sup>7</sup> | 2<sup>6</sup> | 2<sup>5</sup> | 2<sup>4</sup> | 2<sup>3</sup> | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> |   |
 |   | 128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 | Suma |
@@ -126,11 +136,13 @@ No. En base 2 (binario) solo hay dos dígitos, el 0 y el 1. ¡Empezamos a contar
   </div>
 </details>
 
-### 3.3. Binario a hexadecimal
+{:.subsection}
+### Binario a hexadecimal
 
 <iframe src="https://www.youtube.com/embed/uQaLpYDCkAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-### 3.4. Hexadecimal a binario
+{:.subsection}
+### Hexadecimal a binario
 
 Los valores alfanuméricos en hexadecimal son 16: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F.
 
@@ -168,7 +180,8 @@ Habría que responder a la pregunta, ¿Cuántos dígitos en binario necesito par
 {:.question}
 ¿Cuanto es (10)<sub>16</sub> en base 10? ¿Y (10)<sub>16</sub> en decimal? ¿Y (FF)<sub>16</sub> en decimal? ¿Y (GG)<sub>16</sub> en decimal?
 
-## 4. Bibliografía
+{:.section}
+## Bibliografía
 
 - [Direcciones IPv6 – Convenciones y Formatos](https://ccnadesdecero.com/curso/ipv6-formatos-acortar-expandir/)
 - [Conversor de números decimales a binario](https://es.convertbinary.com/decimal-a-binario/)
