--- a/_posts/2022-11-13-capa-red.md
+++ b/_posts/2022-11-13-capa-red.md
@@ -6,6 +6,7 @@ tags: [smr, redes locales, teoría]
 img_path: /assets/img/capa-red/
 ---
 
+{:.section}
 ## Introducción
 
 Este nivel equivale al nivel de red del modelo OSI.
@@ -16,7 +17,8 @@ Asociados al nivel de internet existen los siguientes protocolos:
 - ARP (Address Resolution Protocol) o protocolo de resolución de direcciones.
 - ICMP (Internet Control Message Protocol) o protocolo de mensajes de control.
 
-## 4.1. Protocolo IPv4 y máscaras de red
+{:.section}
+## Protocolo IPv4 y máscaras de red
 
 Leer el artículo [Direcciones IPv4](/posts/direcciones-ipv4/).
 
@@ -27,7 +29,8 @@ A modo de resumen...
 - Permite 2<sup>32</sup> direcciones de red.
 - La máscara de red indica con unos la parte de red y con ceros la parte de host.
 
-## 4.2. Características de IP
+{:.section}
+## Características de IP
 
 - Protocolo que envía paquetes, es decir, envía los datos troceados.
 - Es un protocolo no orientado a conexión, es decir, los paquetes son independientes los unos de los otros.
@@ -53,7 +56,8 @@ _Formato de IPv4_
 {:.question}
 ¿Qué significa cada apartado?
 
-### 4.4. Protocolo ARP
+{:.subsection}
+### Protocolo ARP
 
 ARP (Address Resolution Protocol) o Protocolo de resolución de direcciones.
 
@@ -73,7 +77,8 @@ _Ejemplo de ARP_
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/UFa9O0GfnsY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-### 4.5. Protocolo ICMP
+{:.subsection}
+### Protocolo ICMP
 
 ICMP (Internet Control Message Protocol) o Protocolo de mensajes de control de Internet.
 
@@ -93,5 +98,6 @@ _Tipos de mensajes ICMP_
 {:.question}
 ¿Qué es un checksum?
 
-## 6. Bibliografía
+{:.section}
+## Bibliografía
 
