--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -2,7 +2,7 @@
 title: Binario
 date: 2022-01-30 22:30:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Redes Locales]
-tags: [redes locales, binario, decimal]
+tags: [redes locales, binario, decimal, hexadecimal, smr]
 ---
 
 Existen 10 tipos de personas... las que saben binario y las que no. 
