--- a/_posts/2022-01-17-inodos.md
+++ b/_posts/2022-01-17-inodos.md
@@ -1,5 +1,5 @@
 ---
-title: "Teoría: Enlaces simbólicos, enlaces duros e inodos"
+title: "Enlaces simbólicos, enlaces duros e inodos"
 date: 2022-01-17 19:00:00 +0100
 categories: [Sistemas Microinformáticos y Redes, Seguridad Informática]
 tags: [gnu linux, comandos, terminal, bash, seguridad informática, smr, sistema de ficheros]
