--- a/_posts/2022-09-19-html.md
+++ b/_posts/2022-09-19-html.md
@@ -147,7 +147,7 @@ Todos los siguientes ejemplos son correctos y equivalentes:
 {:.question}
 ¿Es correcto el elemento `<a href='http://www.ejemplo.com'>Un enlace a mi ejemplo.</a>`?
 
-
+{:.question}
 ¿Es correcto el elemento `<a href='http://www.ejemplo.com' title=Es correcto o no>Un enlace a mi ejemplo.</a>`?
 
 {:.question}
