--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -20,10 +20,20 @@ En este articulo vamos a aprender a utilizar el lenguaje de estilos CSS.
   <summary class="card-header question">¿Qué significa que las hojas de estilo están en cascada?</summary>
   <div class="card-body" markdown="1">
 
-Significa que el orden en el que se procesa el CSS influye a la hora de resolver conflictos.
+Significa que el orden en el que se procesa el CSS influye a la hora de resolver conflictos. De manera muy simplificada ordenamos de mayor prioridad a menor prioridad de la siguiente manera:
+
+1. Importancia: Usando la palabra clave `!important`.
+1. Origen: No es necesario conocerlo este curso.
+1. Especificidad:
+   1. Estilos en linea.
+   1. Seleccionando por ID.
+   1. Seleccionando por clase.
+   1. Seleccionando por elemento (o pseudo elementos).
+   1. Seleccionando con el selector universal.
+1. Orden de aparición: El último prevalece.
 
 Aunque esto no es totalmente cierto como se indica en el artículo [¿Qué es la Cascada CSS?](https://lenguajecss.com/css/cascada-css/que-es-cascada/).
-    
+
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
@@ -287,6 +297,11 @@ Si quieres saber más puedes leer el artículo [Indentación de código](https:/
   </summary>
   <div class="card-body" markdown="1">
 
+Por defecto, cada elemento HTML tiene un tipo de representación concreto. Como norma general, los elementos que se utilizan dentro de un párrafo, son de tipo `inline`, mientras que los que se utilizan para agrupar, son de tipo `block`. La propiedad`display` de CSS permite modificar el comportamiento de un elemento HTML.
+
+- `block`: Se apila en vertical. Ocupa todo el ancho disponible de su etiqueta contenedora.
+- `inline`: Se coloca en horizontal. Se adapta al ancho de su contenido. Ignora width o height.
+
 Leer [La propiedad display](https://lenguajecss.com/css/maquetacion-y-colocacion/propiedad-display/)
 
 <!-- Comentario para que no se descuajeringue la cosa -->
@@ -316,7 +331,7 @@ Puedes verlo en [aquí](https://www.w3schools.com/cssref/tryit.php?filename=tryc
   </summary>
   <div class="card-body" markdown="1">
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9VRkcnQ3GpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_e0ddNlc0Y8?si=pOfSizf5pKSrqzxV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 Leer [La propiedad position](https://lenguajecss.com/css/maquetacion-y-colocacion/posicionamiento-css/)
 
@@ -400,7 +415,7 @@ Lee el artículo [Atributos CSS](https://lenguajecss.com/css/selectores/atributo
 </details>
 
 <details class="card mb-2">
-  <summary class="card-header question">¿De dónde adónde van los valores de los colores RGB? ¿Qué significa la A de RGBA?</summary>
+  <summary class="card-header question">¿De dónde a dónde van los valores de los colores RGB? ¿Qué significa la A de RGBA?</summary>
   <div class="card-body" markdown="1">
 
 Las formas de indicar un color en CSS son las siguientes:
@@ -422,7 +437,7 @@ Puedes probarlo tú mismo en [este enlace](https://www.w3schools.com/cssref/tryi
 </details>
 
 <details class="card mb-2">
-  <summary class="card-header question">¿De dónde adónde va el valor de los colores HUE?</summary>
+  <summary class="card-header question">¿De dónde a dónde va el valor de los colores HUE?</summary>
   <div class="card-body" markdown="1">
 
 Las siglas HSL significan matiz de color (hue), saturación y luminosidad (brillo). La primera cifra selecciona el matiz de color, representado con H en el círculo exterior de la imagen. Se trata de un valor ANGLE  de 0deg a 360deg. Por otro lado, las dos siguientes, son el porcentaje PERCENT de saturación y el brillo del color, respectivamente, en ambos casos un valor de 0% a 100%.
