--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -492,7 +492,6 @@ La regla @font-face permite descargar una fuente o tipografía de una página we
   </div>
 </details>
 
-
 <details class="card mb-2">
   <summary class="card-header question" markdown="1">
 
@@ -612,14 +611,20 @@ Leer [Grid CSS: Introducción](https://lenguajecss.com/css/maquetacion-y-colocac
 
 ## Para todo lo demás...
 
-- [Lenguaje CSS](https://lenguajecss.com/css/)
-- [CSS Tutorial (W3Schools)](https://www.w3schools.com/css/default.asp)
+- <https://lenguajecss.com/css/>
+- <https://www.w3schools.com/css/default.asp>
+- <https://cssreference.io/>
+- <https://developer.mozilla.org/es/docs/Learn/CSS>
 
-## Chuleta de CSS
+## Chuletas CSS
 
-Puedes descargar la chuleta en español [aquí](/assets/img/css/css3-cheatsheet-emezeta.pdf).
+- CSS en español (2 caras): <https://i.emezeta.com/weblog/css3-cheatsheet/css3-cheatsheet-emezeta.pdf>
+- Grid y Flex en español (2 caras): <https://www.paradigmadigital.com/assets/cms/cheat_sheet_flexbox_6fb013edd1.pdf>
+- CSS en inglés (6 caras): <https://i.emezeta.com/weblog/css3-cheatsheet/css3-cheatsheet-2017-emezeta.pdf>
+- CSS en inglés (10 caras): <https://learnxinyminutes.com/docs/css/>
+- CSS en inglés (2 caras): <https://cheatography.com/davechild/cheat-sheets/css2/>
 
-## Bibliografía
+## Juegos CSS
 
 - [CSS Battle](https://cssbattle.dev/)
 - [100 DAYS CSS CHALLENGE](https://100dayscss.com/)
