--- a/_posts/2023-11-21-xml.md
+++ b/_posts/2023-11-21-xml.md
@@ -22,7 +22,7 @@ XML es un metalenguaje, es decir, puede ser empleado para definir otros lenguaje
 - LaTeX
 - Etc.
 
-## Elementos en XML
+## Elementos
 
 Los documentos XML están formados por texto plano (sin formato) y contienen marcas (etiquetas) definidas por el desarrollador. Dichas marcas, es recomendable que sean lo más descriptivas posible y, para escribirlas, se utilizan los caracteres menor que "<", mayor que ">" y barra inclinada "/".
 
@@ -91,8 +91,8 @@ Véase que, de todos los elementos que aparecen en este ejemplo, sólo el elemen
 
 Todo documento XML tiene que tener un único elemento raíz (padre) del que desciendan todos los demás. En este caso, el elemento raíz es "persona". Gráficamente, la estructura de elementos de este documento se puede representar como se muestra a continuación:
 
-![imgDescription](arbol-xml-persona.gif)
-_imgDescription_
+![Estructra de elementos de un documento XML persona](arbol-xml-persona.gif)
+_Estructra de elementos de un documento XML persona_
 
 De esta forma, la estructura de cualquier documento XML se puede representar como un árbol invertido de elementos. Se dice que los elementos son los que dan estructura semántica al documento.
 
@@ -108,7 +108,7 @@ EJEMPLO Un elemento puede contener contenido mixto, es decir, texto y otros elem
 
 En este ejemplo, el elemento "persona" contiene los elementos "nombre" y "ciudad", además de los textos " vive en " y ".".
 
-## Normas de sintaxis básicas en XML
+## Normas de sintaxis básicas
 
 En un documento XML, todos los nombres de los elementos son case sensitive, es decir, sensibles a letras minúsculas y mayúsculas, teniendo que cumplir las siguientes normas:
 
@@ -254,7 +254,7 @@ En un documento XML, escribir la declaración XML es opcional. Pero, si se escri
 
 Por otra parte, cuando se escriba el atributo encoding, siempre deberá aparecer después de version. Y, respecto al atributo standalone, siempre que se escriba, deberá ser en último lugar.
 
-## Instrucciones de procesamiento en XML
+## Instrucciones de procesamiento
 
 En un documento XML, una instrucción de procesamiento (processing instruction) sirve para indicar cierta información al programa que procese dicho documento. Las instrucciones de proceso se escriben empezando con la pareja de caracteres `<?` y finalizando con `?>`.
 
