--- a/_posts/2023-11-21-xml.md
+++ b/_posts/2023-11-21-xml.md
@@ -89,12 +89,12 @@ Véase que, de todos los elementos que aparecen en este ejemplo, sólo el elemen
 
 ### Elemento raíz de un documento XML
 
-Todo documento XML tiene que tener un único elemento raíz (padre) del que desciendan todos los demás. En este caso, el elemento raíz es "persona". Gráficamente, la estructura de elementos de este documento se puede representar como se muestra a continuación:
+**Todo documento XML tiene que tener un único elemento raíz (padre) del que desciendan todos los demás**. En este caso, el elemento raíz es "persona". Gráficamente, la estructura de elementos de este documento se puede representar como se muestra a continuación:
 
 ![Estructra de elementos de un documento XML persona](arbol-xml-persona.gif)
 _Estructra de elementos de un documento XML persona_
 
-De esta forma, la estructura de cualquier documento XML se puede representar como un árbol invertido de elementos. Se dice que los elementos son los que dan estructura semántica al documento.
+De esta forma, **la estructura de cualquier documento XML se puede representar como un árbol invertido de elementos**. Se dice que los elementos son los que dan estructura semántica al documento.
 
 ### Elementos con contenido mixto
 
@@ -110,24 +110,24 @@ En este ejemplo, el elemento "persona" contiene los elementos "nombre" y "ciudad
 
 ## Normas de sintaxis básicas
 
-En un documento XML, todos los nombres de los elementos son case sensitive, es decir, sensibles a letras minúsculas y mayúsculas, teniendo que cumplir las siguientes normas:
+En un documento XML, **todos los nombres de los elementos son case sensitive**, es decir, sensibles a letras minúsculas y mayúsculas, teniendo que cumplir las siguientes normas:
 
-Pueden contener letras minúsculas, letras mayúsculas, números, puntos ".", guiones medios "-" y guiones bajos "_".
-
-Asimismo, pueden contener el carácter dos puntos ":". No obstante, su uso se reserva para cuando se definan espacios de nombres.
-
-El primer carácter tiene que ser una letra o un guion bajo "_".
+- Pueden contener letras minúsculas, letras mayúsculas, números, puntos ".", guiones medios "-" y guiones bajos "_".
+- Asimismo, pueden contener el carácter dos puntos ":". No obstante, su uso se reserva para cuando se definan espacios de nombres.
+- El primer carácter tiene que ser una letra o un guion bajo "_".
 
 Por otra parte, hay que tener en cuenta que, detrás del nombre de una etiqueta se permite escribir un espacio en blanco o un salto de línea. Por ejemplo, sintácticamente es correcto escribir:
 
 ```xml
-<ciudad >Pamplona</ciudad>
+<ciudad >Pamplona</ciudad
+>
 ```
 
 Ahora bien, no puede haber un salto de línea o un espacio en blanco antes del nombre de una etiqueta:
 
 ```xml
-<ciudad>Pamplona</ ciudad>
+<
+ciudad>Pamplona</ ciudad>
 ```
 
 EJEMPLO Los siguientes elementos no están escritos correctamente por incumplir alguna regla de sintaxis:
@@ -160,13 +160,16 @@ En su lugar, sería correcto escribir:
 <color_favorito>azul</color_favorito>
 ```
 
-Las letras no inglesas (á, Á, ñ, Ñ...) están permitidas. Sin embargo, es recomendable no utilizarlas para reducir posibles incompatibilidades con programas que puedan no reconocerlas.
+**Las letras no inglesas (á, Á, ñ, Ñ...) están permitidas**. Sin embargo, es recomendable no utilizarlas para reducir posibles incompatibilidades con programas que puedan no reconocerlas.
 
 En cuanto al carácter guion medio "-" y al punto ".", aunque también están permitidos para nombrar etiquetas, igualmente se aconseja evitar su uso; el guion medio porque podría confundirse con el signo menos, y el punto porque, por ejemplo al escribir color.favorito, podría interpretarse que favorito es una propiedad del objeto color.
 
+{:.question}
+¿Qué significa que XML es case sensitive?
+
 ## Atributos en XML
 
-Los elementos de un documento XML pueden tener atributos definidos en la etiqueta de inicio. Un atributo sirve para proporcionar información extra sobre el elemento que lo contiene.
+Los elementos de un documento XML pueden tener atributos definidos en la etiqueta de inicio. **Un atributo sirve para proporcionar información extra sobre el elemento que lo contiene**.
 
 EJEMPLO Dados los siguientes datos de un producto:
 
@@ -183,7 +186,7 @@ Su representación en un documento XML podría ser, por ejemplo:
 </producto>
 ```
 
-En este ejemplo se han escrito tres atributos: codigo, color y precio. Obsérvese que, sus valores ("G45", "negro" y "12.56") se han escrito entre comillas dobles ("). No obstante, también pueden ir entre comillas simples (').
+En este ejemplo se han escrito tres atributos: `codigo`, `color` y `precio`. Obsérvese que, sus valores ("G45", "negro" y "12.56") se han escrito entre comillas dobles (`"`). No obstante, también pueden ir entre comillas simples (`'`).
 
 Si, por ejemplo, el atributo codigo se quisiera representar como un elemento, se podría escribir:
 
@@ -214,9 +217,10 @@ Los atributos contenidos en un elemento, como en este caso x, X e y, deben separ
 
 ## Declaración XML
 
-La declaración XML que se puede escribir al principio de un documento XML, empieza con los caracteres `<?`" y termina con `?>` al igual que las instrucciones de procesamiento. Sin embargo, la declaración XML no es una instrucción de procesamiento (o proceso).
+La declaración XML que se puede escribir al principio de un documento XML, empieza con los caracteres `<?` y termina con `?>` al igual que las instrucciones de procesamiento. Sin embargo, la declaración XML no es una instrucción de procesamiento (o proceso).
 
-Atributos version y encoding
+### Atributos version y encoding
+
 EJEMPLO Un documento XML podría contener la siguiente declaración XML:
 
 ```xml
@@ -227,7 +231,8 @@ En esta declaración XML, se está indicando que 1.0 es la versión de XML utili
 
 En un documento XML no es obligatorio que aparezca la declaración XML. Ahora bien, si se incluye, tiene que aparecer en la primera línea del documento, y el carácter "<" debe ser el primero de dicha línea, es decir, antes no pueden aparecer espacios en blanco.
 
-Cómo crear un documento XML
+### Cómo crear un documento XML
+
 EJEMPLO Si, por ejemplo, en el Bloc de notas de Microsoft Windows escribimos y guardamos (codificado en UTF-8) un archivo llamado "persona.xml" como se muestra en la siguiente imagen:
 
 ![Código del archivo persona.xml en el Bloc de notas](persona-xml-bloc-de-notas.gif)
@@ -248,7 +253,7 @@ EJEMPLO En una declaración XML, además de los atributos version y encoding, ta
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 ```
 
-Al escribir standalone="yes" se está indicando que el documento es independiente de otros, como por ejemplo de una DTD (Document Type Definition, Definición de Tipo de Documento) externa. En caso contrario, significará que el documento no es independiente.
+Al escribir `standalone="yes"` se está indicando que el documento es independiente de otros, como por ejemplo de una DTD (Document Type Definition, Definición de Tipo de Documento) externa. En caso contrario, significará que el documento no es independiente.
 
 En un documento XML, escribir la declaración XML es opcional. Pero, si se escribe, el atributo version es obligatorio indicarlo. Sin embargo, los atributos encoding y standalone son opcionales y, por defecto, sus valores son "UTF-8" y "no", respectivamente.
 
@@ -256,9 +261,10 @@ Por otra parte, cuando se escriba el atributo encoding, siempre deberá aparecer
 
 ## Instrucciones de procesamiento
 
-En un documento XML, una instrucción de procesamiento (processing instruction) sirve para indicar cierta información al programa que procese dicho documento. Las instrucciones de proceso se escriben empezando con la pareja de caracteres `<?` y finalizando con `?>`.
+En un documento XML, **una instrucción de procesamiento (processing instruction) sirve para indicar cierta información al programa que procese dicho documento**. Las instrucciones de proceso se escriben empezando con la pareja de caracteres `<?` y finalizando con `?>`.
 
-Cómo asociar un archivo CSS a un documento XML
+### Cómo asociar un archivo CSS a un documento XML
+
 EJEMPLO En un documento XML podría escribirse, por ejemplo, la siguiente instrucción de procesamiento:
 
 ```xml
@@ -304,8 +310,6 @@ En un documento XML, no es obligatorio que aparezcan instrucciones de procesamie
 
 En XML existen algunos caracteres que son especiales por su significado y, para escribirlos en un documento XML, se pueden utilizar las referencias a entidades mostradas en la siguiente tabla:
 
-Referencias a entidades en XML
-
 | Carácter           | Entidad               | Referencia a entidad |
 |--------------------|-----------------------|----------------------|
 | `<` (menor que)      | lt (less than)        | &lt;                 |
@@ -332,30 +336,31 @@ Al abrirlo en Google Chrome se podrá visualizar:
 ![Visualización del archivo entidades.xml en Google Chrome](entidades-xml-chrome.gif)
 _Visualización del archivo entidades.xml en Google Chrome_
 
-En el navegador web, se puede ver que donde se han escrito las referencias a entidades en el documento XML (por ejemplo &lt;), se muestran los caracteres correspondientes (por ejemplo `<`).
+En el navegador web, se puede ver que donde se han escrito las referencias a entidades en el documento XML (por ejemplo `&lt;`), se muestran los caracteres correspondientes (por ejemplo`<`).
 
-Caracteres problemáticos en XML: menor que (<) y ampersand (&)
-EJEMPLO En un documento XML, el carácter "<" es problemático porque indica el comienzo de una etiqueta. Por tanto, en vez de escribir, por ejemplo:
+### Caracteres problemáticos en XML: menor que (`<`) y ampersand (`&`)
+
+EJEMPLO En un documento XML, el carácter `<` es problemático porque indica el comienzo de una etiqueta. Por tanto, en vez de escribir, por ejemplo:
 
 ```xml
 <condicion>a<b</condicion>
 ```
 
-Habría que utilizar la referencia a entidad &lt; escribiendo:
+Habría que utilizar la referencia a entidad `&lt;` escribiendo:
 
 ```xml
 <condicion>a&lt;b</condicion>
 ```
 
-EJEMPLO El carácter ">" sí puede utilizarse en el texto contenido en un elemento, no siendo incorrecto escribir, por ejemplo:
+EJEMPLO El carácter `>` sí puede utilizarse en el texto contenido en un elemento, no siendo incorrecto escribir, por ejemplo:
 
 ```xml
 <condicion>a>b</condicion>
 ```
 
-Ahora bien, se recomienda hacer uso de su referencia a entidad (&gt;).
+Ahora bien, se recomienda hacer uso de su referencia a entidad (`&gt;`).
 
-EJEMPLO En un documento XML, el carácter ampersand "&" también es problemático, ya que se utiliza para indicar el comienzo de una referencia a entidad. Por ejemplo, no es correcto escribir:
+EJEMPLO En un documento XML, el carácter ampersand `&` también es problemático, ya que se utiliza para indicar el comienzo de una referencia a entidad. Por ejemplo, no es correcto escribir:
 
 ```xml
 <condicion>a==1 && b==2</condicion>
@@ -367,8 +372,9 @@ En su lugar se debe escribir lo siguiente:
 <condicion>a==1 &amp;&amp; b==2</condicion>
 ```
 
-Uso de la comilla doble (") y de la comilla simple (') en atributos
-EJEMPLO Si el valor de un atributo se escribe entre comillas dobles ("), dicho valor no podrá contener dicho carácter. Por ejemplo, no es correcto escribir:
+### Uso de la comilla doble (`"`) y de la comilla simple (`'`) en atributos
+
+EJEMPLO Si el valor de un atributo se escribe entre comillas dobles (`"`), dicho valor no podrá contener dicho carácter. Por ejemplo, no es correcto escribir:
 
 ```xml
 <dato caracter="comilla doble(")"/>
@@ -380,19 +386,19 @@ Para ello, hay que utilizar la referencia a entidad &quot; como se muestra a con
 <dato caracter="comilla doble(&quot;)"/>
 ```
 
-De igual modo ocurre con la comilla simple ('), siendo incorrecto escribir, por ejemplo:
+De igual modo ocurre con la comilla simple (`'`), siendo incorrecto escribir, por ejemplo:
 
 ```xml
 <dato caracter='comilla simple(')'/>
 ```
 
-Por lo que, en este caso, habría que usar &apos; como se muestra seguidamente:
+Por lo que, en este caso, habría que usar `&apos;` como se muestra seguidamente:
 
 ```xml
 <dato caracter='comilla simple(&apos;)'/>
 ```
 
-Por otro lado, los valores de atributos escritos entre comillas dobles (") sí pueden contener al carácter comilla simple (') y a la inversa. Por ejemplo, es correcto escribir:
+Por otro lado, los valores de atributos escritos entre comillas dobles (`"`) sí pueden contener al carácter comilla simple (`'`) y a la inversa. Por ejemplo, es correcto escribir:
 
 ```xml
 <dato caracter="comilla simple(')"/>
