--- a/_posts/2023-11-21-xml.md
+++ b/_posts/2023-11-21-xml.md
@@ -409,9 +409,10 @@ En estos casos, no es obligatorio usar las referencias a entidades, pero sí rec
 
 ## Referencias de caracteres
 
-En un documento XML se pueden escribir referencias de caracteres Unicode con los símbolos &#, seguidos del valor decimal o hexadecimal del carácter Unicode que se quiera representar y, finalmente, añadiendo el carácter punto y coma ";".
+En un documento XML se pueden escribir referencias de caracteres Unicode con los símbolos `&#`, seguidos del valor decimal o hexadecimal del carácter Unicode que se quiera representar y, finalmente, añadiendo el carácter punto y coma `;`.
 
-Representación del carácter Euro (€) en XML
+### Representación del carácter Euro (€) en XML
+
 EJEMPLO Dado el documento XML "productos.xml":
 
 ```xml
@@ -427,11 +428,11 @@ Al visualizarlo en un navegador web, se podrá ver lo siguiente:
 ![Visualización del archivo productos.xml](productos-xml-chrome.gif)
 _Visualización del archivo productos.xml_
 
-Obsérvese que, en este caso, para representar al símbolo del Euro (€), la primera vez se ha utilizado su valor decimal (&#8364;) en Unicode y, la segunda vez, su valor hexadecimal (&#x20AC;).
+Obsérvese que, en este caso, para representar al símbolo del Euro (`€`), la primera vez se ha utilizado su valor decimal (`&#8364;`) en Unicode y, la segunda vez, su valor hexadecimal (`&#x20AC;`).
 
 ## Comentarios
 
-Para escribir comentarios en un documento XML, estos deben escribirse entre los caracteres "<!--" y "-->". Por ejemplo:
+Para escribir comentarios en un documento XML, estos deben escribirse entre los caracteres `<!--` y `-->`. Por ejemplo:
 
 ```xml
 <!-- Esto es un comentario escrito en un documento XML -->
@@ -474,13 +475,13 @@ EJEMPLO Por otro lado, hay que tener en cuenta que en los comentarios de un docu
 <!-- Dos guiones seguidos -- en un comentario da error -->
 ```
 
-De forma que, no es posible anidar comentarios en un documento XML.
+De forma que, **no es posible anidar comentarios en un documento XML**.
 
 ## Secciones CDATA
 
-Un documento XML puede contener secciones CDATA (Character DATA) para escribir texto que no se desea que sea analizado. Por ejemplo, esto puede ser útil cuando se quiere escribir texto que contenga alguno de los caracteres problemáticos: menor que "<" o ampersand "&".
+Un documento XML puede contener secciones CDATA (Character DATA) para escribir texto que no se desea que sea analizado. Por ejemplo, esto puede ser útil cuando se quiere escribir texto que contenga alguno de los caracteres problemáticos: menor que `<` o ampersand `&`.
 
-En un documento XML, para incluir una sección CDATA, esta se escribe comenzando con la cadena de caracteres "<![CDATA[" y terminando con los caracteres "]]>".
+En un documento XML, para incluir una sección CDATA, esta se escribe comenzando con la cadena de caracteres `<![CDATA[` y terminando con los caracteres `]]>`.
 
 EJEMPLO Una sección CDATA puede contener, por ejemplo, el código fuente de un programa escrito en lenguaje C:
 
@@ -507,9 +508,9 @@ En un navegador web se visualizará algo parecido a:
 ![Visualización del archivo ejemplo_cdata.xml](ejemplo_cdata_chrome.gif)
 _Visualización del archivo ejemplo_cdata.xml_
 
-Dentro de una sección CDATA no se puede escribir la cadena `]]>`. En consecuencia, no se pueden anidar secciones CDATA.
+Dentro de una sección CDATA no se puede escribir la cadena `]]>`. En consecuencia, **no se pueden anidar secciones CDATA**.
 
-Por otra parte, no está permitido escribir espacios en blanco o saltos de línea en las cadenas de inicio `<![CDATA[" o fin "]]>` de una sección CDATA.
+Por otra parte, no está permitido escribir espacios en blanco o saltos de línea en las cadenas de inicio `<![CDATA[` o fin`]]>` de una sección CDATA.
 
 ## Espacios de nombres
 
@@ -577,7 +578,7 @@ En el ejemplo, obsérvese que, xmlns es un atributo que se ha utilizado en la et
 
 Los prefijos definidos son e1 y e2, respectivamente. Véase que, se han añadido dichos prefijos a las etiquetas que aparecen en el documento: `<e1:carta>`, `<e2:carta>`,`<e1:palo>`, etc.
 
-Los URI especificados en un documento XML no tienen porqué contener nada, su función es ser únicos. No obstante, en un URI se puede mostrar información si se considera oportuno. Véase, por ejemplo:
+**Los URI especificados en un documento XML no tienen porqué contener nada, su función es ser únicos. No obstante, en un URI se puede mostrar información si se considera oportuno.** Véase, por ejemplo:
 
 - <http://www.w3.org/1999/xhtml/>
 - <http://www.w3.org/1999/XSL/Transform>
@@ -585,7 +586,7 @@ Los URI especificados en un documento XML no tienen porqué contener nada, su fu
 
 ### Definición de espacios de nombres en elementos distintos al raíz
 
-EJEMPLO En un documento XML, los espacios de nombres pueden definirse en el elemento raíz –como acabamos de ver– o, directamente, en los elementos que los vayan a utilizar. Por ejemplo:
+EJEMPLO En un documento XML, los espacios de nombres pueden definirse en el elemento raíz (como acabamos de ver) o, directamente, en los elementos que los vayan a utilizar. Por ejemplo:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -610,9 +611,10 @@ EJEMPLO En un documento XML, los espacios de nombres pueden definirse en el elem
 </e1:ejemplo>
 ```
 
-En un documento XML es posible definir todos los espacios de nombres que se necesiten, pudiéndose mezclar –si fuese necesario– los elementos de dichos espacios de nombres.
+En un documento XML es posible definir todos los espacios de nombres que se necesiten, pudiéndose mezclar (si fuese necesario) los elementos de dichos espacios de nombres.
 
-Definición de un espacio de nombres por defecto
+### Definición de un espacio de nombres por defecto
+
 EJEMPLO Por otra parte, se puede definir un espacio de nombres por defecto mediante la siguiente sintaxis:
 
 ```xml
@@ -660,7 +662,7 @@ EJEMPLO En el siguiente ejemplo, inicialmente se define un espacio de nombres po
 
 ### Cómo indicar que un elemento no pertenece a ningún espacio de nombres
 
-EJEMPLO En un documento XML, para indicar que determinados elementos –o todos– no pertenecen a ningún espacio de nombres, se escribe el atributo xmlns vacío, es decir, xmlns="".
+EJEMPLO En un documento XML, para indicar que determinados elementos (o todos) no pertenecen a ningún espacio de nombres, se escribe el atributo xmlns vacío, es decir, `xmlns=""`.
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -763,7 +765,7 @@ Las aplicaciones que hacen uso de documentos XML suelen hacer este tratamiento d
 
 ### Uso del atributo xml:space
 
-EJEMPLO Por otra parte, los elementos de un documento XML pueden contener el atributo predefinido xml:space con el valor "preserve" para indicar que los espacios que aparecen en el contenido (texto) de dicho elemento, y sus sucesores, deben ser preservados:
+EJEMPLO Por otra parte, los elementos de un documento XML pueden contener el atributo predefinido `xml:space` con el valor "preserve" para indicar que los espacios que aparecen en el contenido (texto) de dicho elemento, y sus sucesores, deben ser preservados:
 
 ```xml
 <clasificacion xml:space="preserve">
@@ -773,7 +775,7 @@ EJEMPLO Por otra parte, los elementos de un documento XML pueden contener el atr
 </clasificacion>
 ```
 
-Los únicos valores que admite el atributo xml:space son "preserve" y "default", siendo este último su valor por defecto cuando no se escribe dicho atributo.
+Los únicos valores que admite el atributo `xml:space` son "preserve" y "default", siendo este último su valor por defecto cuando no se escribe dicho atributo.
 
 El valor "default" indica que la aplicación que haga uso del documento XML es la encargada de decidir cómo tratar los espacios en blanco. Ahora bien, aún indicando el valor "preserve", hay que tener en cuenta que no todos los programas que hacen uso de documentos XML reconocen este atributo.
 
